# python_prototype_with_hydra

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  setup.cfg
configs/: config.yaml
src/utils/: utils.py
