[tool.poetry]
name = "python_prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
pre-commit = "^2.15.0"
python-dotenv = "^0.19.0"
hydra-core = "^1.1.1"
hydra-colorlog = "^1.1.0"
rich = "^10.11.0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
